# datascience

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.forecasting  Dockerfile.forecasting.dockerignore  README.md  docker-compose.forecasting.yml  docker-compose.yml  pyproject.toml
data/demand_history/: raw_data_measured_demand.csv
data/forecasting/: data_filled_linear.csv  data_filled_linear_featured.csv  data_filled_linear_test.csv  data_filled_linear_train.csv  data_filled_seasonal.csv  data_filled_seasonal_featured.csv  data_filled_seasonal_test.csv  data_filled_seasonal_train.csv
data/optimization/raw/: Gro_handelspreise_202403010000_202603020000_Stunde.csv
docs/: deploy.md
docs/deploy/: README.md
docs/forecasting/: deploy.md  forecasting_data_preperation_pipeline.md  hourly_inference_pipeline.md  how_to_add_a_new_model.md
docs/optimization/: Asset_Specifications.drawio.html  OptimizationProblem.md  deploy.md  district_heating_optimization_formulation.md  forecast_contract.md  hourly_mpc.md  optimization_problem.md
notebooks/forecasting/: Heat Demand Forecasting.ipynb  LSTM.ipynb  XGBoost.ipynb  compare_filled_data.ipynb  energy_demand_forecasting_EnergyTrade (1).ipynb  evaluate_baselines.ipynb  lstm_heat_demand_forcasting.ipynb
notebooks/optimization/: MILP_Opt.ipynb  all_in_one_evaluation_notebook.ipynb  district_heating_milp_playground.ipynb  learned_v_prototype.ipynb  learned_v_training_data.pkl  milp_formulation_clean.ipynb  milp_prototype.ipynb  mpc_prototype.ipynb  single_unit_evaluation.ipynb  smard_live_prices.ipynb  terminal_value_oracle.ipynb
notebooks/optimization/Data/: RawData_MeasuredHeadDemand.csv
scripts/: reset_demo.sh  sim_forecaster.py  smoke_live.py
scripts/_archive/: harvest_regression_pin.py
src/forecasting/: XGBoost.py  XGBoost1Hour.py  base_model.py  baseline_models.py  data_cleaning.py  data_pipeline.py  export.py  feature_engineering.py  fetch_core_weather_data  fetch_weather_data.py  fill_missing_data.py  lstm_model.py  replay_loop.py  run_hourly_forecast.py
src/optimization/: __init__.py  backtest.py  config.py  config_diff.py  config_diff_cli.py  config_validation.py  daemon.py  dispatch.py  export_formatter.py  init_state.py  model.py  run.py  solve.py  state.py  write_default_config.py
src/optimization/adapters/: __init__.py  forecast.py  smard.py  smard_live.py
tests/forecasting/: test_pipeline_e2e.py  test_replay_loop_helpers.py  test_replay_state.py
tests/optimization/: conftest.py  test_adapters.py  test_backtest.py  test_config_diff.py  test_config_diff_cli.py  test_config_validation.py  test_daemon.py  test_dispatch.py  test_export_formatter.py  test_live_smard_integration.py  test_multi_asset.py  test_regression_pin.py  test_run_e2e.py  test_smoke.py  test_state.py
