[project]
name = "datascience"
version = "0.1.0"
description = "Forecasting and optimization for district heating dispatch"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "pyomo",
    "highspy",
    "jupyter",
    "ipykernel",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
optimization-backtest = "optimization.backtest:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
