[project]
name = "datascience"
version = "0.1.0"
description = "Forecasting and optimization for district heating dispatch"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "pyarrow",
    "matplotlib",
    "pyomo",
    "highspy",
    "apscheduler",
]

[project.optional-dependencies]
dev = ["pytest"]
notebooks = ["jupyter", "ipykernel"]

[project.scripts]
optimization-backtest = "optimization.backtest:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "live: integration tests that hit the real SMARD API (skipped by default; run with `pytest -m live`)",
]
addopts = "-m 'not live'"
