[project]
name = "datascience"
version = "0.1.0"
description = "Forecasting and optimization for district heating dispatch"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "pyarrow",
    "matplotlib",
    # pyomo + highspy versions are pinned because tests/optimization/
    # test_regression_pin.py asserts bit-identical objective and dispatch
    # against the pre-modular-assets MILP. Variable ordering and HiGHS
    # branching heuristics can shift across releases (including patch
    # releases for highspy, where branching tweaks have shipped before)
    # and silently break the pin. highspy is pinned to an exact version;
    # pyomo to the minor (its wrapper layer is more stable). If you bump
    # either bound, re-run the regression pin first; if it drifts within
    # ULP-noise, update the goldens (NOT the bounds) after a manual sanity
    # check.
    "pyomo~=6.10.0",
    "highspy==1.14.0",
    "apscheduler",
]

[project.optional-dependencies]
dev = ["pytest"]
notebooks = ["jupyter", "ipykernel"]

[project.scripts]
optimization-backtest = "optimization.backtest:main"
optimization-init-state = "optimization.init_state:main"
optimization-write-default-config = "optimization.write_default_config:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "live: integration tests that hit the real SMARD API (skipped by default; run with `pytest -m live`)",
]
addopts = "-m 'not live'"
